--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Cronômetro</title>
 </head>
-<body>
-    <span id="minutos_esquerda">0</span>
-    <span id="minutos_direita">0</span>
-    <span>:</span>
-    <span id="segundos_esquerda">0</span>
-    <span id="segundos_direita">0</span>
+<body class="bg-black text-white ">
+
+    <div class="grid place-content-center min-h-screen px-20">
+        <div class="border rounded-full py-40">
+            <section class="w-sm flex justify-center text-7xl">
+                <span id="minutos_esquerda">0</span>
+                <span id="minutos_direita">0</span>
+                <span>:</span>
+                <span id="segundos_esquerda">0</span>
+                <span id="segundos_direita">0</span>
+            </section>
+        </div>
+    </div>
 
     <script src="cronometro.js"></script>
 </body>
